--- a/.gitmodules
+++ b/.gitmodules
@@ -85,9 +85,9 @@
 [submodule ".vim/bundle/vim-jsx"]
 	path = .vim/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
-[submodule "ale"]
-	path = .vim/bundle/ale
-	url = git://github.com/w0rp/ale.git
 [submodule ".vim/bundle/vim-tmux-focus-events"]
 	path = .vim/bundle/vim-tmux-focus-events
 	url = git://github.com/tmux-plugins/vim-tmux-focus-events.git
+[submodule ".vim/bundle/coc"]
+	path = .vim/bundle/coc
+	url = https://github.com/neoclide/coc.nvim
