--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule ".vim/bundle/coc"]
 	path = .vim/bundle/coc
 	url = https://github.com/neoclide/coc.nvim
+[submodule ".vim/bundle/vim-toml"]
+	path = .vim/bundle/vim-toml
+	url = https://github.com/cespare/vim-toml
